Filled out pages
Filled out ministries. Events not working, and high school page is
broken.

--- a/CalvaryOpebBibleWebsite/Views/Ministries/Children.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Children.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CalvaryOpebBibleWebsite.Models.Ministries>
+﻿@model IEnumerable<CalvaryOpebBibleWebsite.Models.MinistriesViewModel>
 
 @{
     ViewBag.Title = "Children";
