--- a/CalvaryOpebBibleWebsite/Views/Ministries/MiddleSchool.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/MiddleSchool.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CalvaryOpebBibleWebsite.Models.Ministries>
+﻿@model IEnumerable<CalvaryOpebBibleWebsite.Models.MinistriesViewModel>
 
 @{
     ViewBag.Title = "MiddleSchool";
@@ -33,10 +33,22 @@
         -->
     </div>
     <div class="Picture">
-
+        <img align="left" alt="" height="283" src="http://media1.razorplanet.com/share/510327-3657/siteImages/MiddleSchoolTeachingTeam_01.jpg"
+             style="margin: 0px 0px 15px 10px" title="" width="250">
     </div>
     <div class="Body">
-
+        <h2>On Sunday mornings...</h2>
+        <p>
+            We have amazing leaders who prepare a weekly lesson tailored for middle school students to grow, be affirmed,
+            and connect with their peers.They will be a part of the service with the adults until the time they are released
+            to participate in their own class.They are dismissed at the conclusion of the service so that they can locate their
+            parents in the atrium.
+        </p>
+        <h2>Youth Group on Thursday Nights...</h2>
+        <p>
+            Combined Middle School / High School from 7-8:30pm in the Gym.
+            (Please check home page calendar to verify current week.)
+        </p>
     </div>
     <div class="Links">
 
