--- a/CalvaryOpebBibleWebsite/Views/Ministries/Seniors.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Seniors.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CalvaryOpebBibleWebsite.Models.Ministries>
+﻿@model IEnumerable<CalvaryOpebBibleWebsite.Models.MinistriesViewModel>
 
 @{
     ViewBag.Title = "Seniors";
@@ -33,16 +33,40 @@
         -->
     </div>
     <div class="Picture">
-
+        <img alt="" src="http://resources.razorplanet.com/510327-3657/510327_667_352483.jpg" 
+             style="width: 421px; height: 600px; float: left; margin-left: 15px; margin-right: 15px;">
     </div>
     <div class="Body">
-
+        <h2><3 />6 Update/h2>
+        <p>We will be having a St. Patty's green time potluck dinner Sunday, March 15th, at 5:30 PM. 
+            Bring your favorite St. Patrick's dish AND salad OR desert. Be sure and wear your green outfit. 
+            Please bring card and board games for some fun after dinner.  If you have any questions, 
+            please contact Arlene at: 541-554-1158 or Rod at 541-554-8849.
+            (Please check home page calendar to verify current scheduled activities!)</p>
     </div>
     <div class="Links">
 
     </div>
     <div class="Downloads">
+        <table cellpadding="0" cellspacing="0" border="0" width="100%" class="res_table">
 
+            <tbody>
+                <tr class="res_item">
+                    <td align="center" valign="top" width="130" class="border_bottom">
+                        <div><a href="http://resources.razorplanet.com/510327-3657/814739_CommunityGroupsBrochure.pdf" target="_blank"><img src="~/Content/Images/icon_res_file.png" border="0" width="100" alt=""></a></div>
+                        <div class="res_text_link"><a href="http://resources.razorplanet.com/510327-3657/814739_CommunityGroupsBrochure.pdf" target="_blank">download</a></div>
+                    </td>
+                    <td align="left" valign="top" class="border_bottom">
+                        <h4>Community Groups Brochure</h4>
+
+                        <div class="date file_type">
+                            <span class="subtle file_type">resource type: file</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                        </div>
+
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     <div class="Events">
         <table class="table">
