--- a/CalvaryOpebBibleWebsite/Views/Ministries/HighSchool.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/HighSchool.cshtml
@@ -204,30 +204,59 @@ $(document).ready(function() {
     <div class="Downloads">
     </div>
     <div class="Events">
-        <table class="table">
-            @foreach (var item in Model)
-            {
+        <div class="Events">
+            <table class="table">
                 <tr>
                     <th>
-                        Events of intrest:
+                        Weekly Events:
                     </th>
                 </tr>
+                @foreach (var item in Model.Where(i => i.EventType != "Weekly Events"))
+                {
+
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EventName)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StartDate)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EventDescription)
+                        </td>
+                    </tr>
+                }
+            </table>
+            <table class="table">
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Event.EventName)
-                    </td>
+                    <th>
+                        Upcoming Events:
+                    </th>
                 </tr>
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Event.StartDate)
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Event.EventDescription)
-                    </td>
-                </tr>
-            }
-        </table>
-    </div>
+                @foreach (var item in Model.Where(i => i.EventType != "Upcoming Events"))
+                {
+
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EventName)
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StartDate)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EventDescription)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
 </div>
