--- a/CalvaryOpebBibleWebsite/Views/Ministries/MiddleSchool.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/MiddleSchool.cshtml
@@ -7,7 +7,7 @@
 <div class="jumbotron">
     <h2>Ministry Leaders</h2>
     <div style="width:25%; padding-top:5%;">
-        <!--
+       
         <table class="table">
             @foreach (var item in Model)
             {
@@ -30,7 +30,7 @@
                 </tr>
             }
         </table>
-        -->
+       
     </div>
     <div class="Picture">
         <img align="left" alt="" height="283" src="http://media1.razorplanet.com/share/510327-3657/siteImages/MiddleSchoolTeachingTeam_01.jpg"
@@ -57,30 +57,59 @@
 
     </div>
     <div class="Events">
-        <table class="table">
-            @foreach (var item in Model)
-            {
+        <div class="Events">
+            <table class="table">
                 <tr>
                     <th>
-                        Events of intrest:
+                        Weekly Events:
                     </th>
                 </tr>
+                @foreach (var item in Model.Where(i => i.EventType != "Weekly Events"))
+                {
+
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EventName)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StartDate)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EventDescription)
+                        </td>
+                    </tr>
+                }
+            </table>
+            <table class="table">
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Event.EventName)
-                    </td>
+                    <th>
+                        Upcoming Events:
+                    </th>
                 </tr>
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Event.StartDate)
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Event.EventDescription)
-                    </td>
-                </tr>
-            }
-        </table>
-    </div>
+                @foreach (var item in Model.Where(i => i.EventType != "Upcoming Events"))
+                {
+
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EventName)
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StartDate)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EventDescription)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
 </div>
