--- a/CalvaryOpebBibleWebsite/Views/Ministries/CommunityGroups.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/CommunityGroups.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CalvaryOpebBibleWebsite.Models.MinistriesViewModel>
 
 @{
-    ViewBag.Title = "Children";
+    ViewBag.Title = "CommunityGroups";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="jumbotron">
@@ -35,7 +35,39 @@
     </table>
 
 
-   
+    @*<div class="Picture">
+            <h2>Worship the Lord with Gladness</h2>
+            <img alt="" height="166" src="http://media1.razorplanet.com/share/510327-3657/siteImages/Archive_Other/Worship_01.jpg"
+                 style="margin: 10px 10px 0px" title="" width="250">
+        </div>
+        <div class="Body">
+            <p>Call the church office on our contact page to fnd out current events for adults.</p>
+        </div>
+        <div class="Links">
+
+        </div>
+        <div class="Downloads">
+            <table cellpadding="0" cellspacing="0" border="0" width="100%" class="res_table">
+
+                <tbody>
+                    <tr class="res_item">
+                        <td align="center" valign="top" width="130" class="border_bottom">
+                            <div><a href="http://resources.razorplanet.com/510327-3657/814739_CommunityGroupsBrochure.pdf" target="_blank"><img src="/img/resources/icon_res_file.png" border="0" width="100" alt=""></a></div>
+                            <div class="res_text_link"><a href="http://resources.razorplanet.com/510327-3657/814739_CommunityGroupsBrochure.pdf" target="_blank">download</a></div>
+                        </td>
+                        <td align="left" valign="top" class="border_bottom">
+                            <h4>Community Groups Brochure</h4>
+
+                            <div class="date file_type">
+                                <span class="subtle file_type">resource type: file</span>&nbsp;&nbsp;&nbsp;&nbsp;
+                            </div>
+
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    *@
     <div class="Events" style="width:70%; float:left;margin-left:2%">
         <table class="table" style=' background: #fff;color: #222;border-radius: 5px;box-sizing: border-box; border-color:#222'>
             <tr>
