--- a/CalvaryOpebBibleWebsite/Views/Ministries/Adults.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Adults.cshtml
@@ -6,14 +6,16 @@
 }
 <div class="jumbotron">
     <h2>Ministry Leaders</h2>
-    <div style="width:25%; padding-top:5%;">
+    
       
-        <table class="table">
-            @foreach (var item in Model)
+    <table class="table" style="width:25%; padding-top:5%; float:left; background: #fff;color: #222;border-radius: 5px;box-sizing: border-box; border-color:#222">
+        @foreach (var item in Model)
+        {
+            if (item.MinistriesLeader != null)
             {
                 <tr>
                     <th>
-                        Ministry Leader:
+                        Ministry Leaders:
                     </th>
                 </tr>
                 <tr>
@@ -29,12 +31,13 @@
 
                 </tr>
             }
-        </table>
+        }
+    </table>
        
-    </div>
-    <div class="Picture">
+    
+    @*<div class="Picture">
         <h2>Worship the Lord with Gladness</h2>
-        <img alt="" height="166" src="http://media1.razorplanet.com/share/510327-3657/siteImages/Archive_Other/Worship_01.jpg" 
+        <img alt="" height="166" src="http://media1.razorplanet.com/share/510327-3657/siteImages/Archive_Other/Worship_01.jpg"
              style="margin: 10px 10px 0px" title="" width="250">
     </div>
     <div class="Body">
@@ -64,60 +67,104 @@
             </tbody>
         </table>
     </div>
-    <div class="Events">
-        <table class="table">
+    *@
+    <div class="Events" style="width:70%; float:left;margin-left:2%">
+        <table class="table" style=' background: #fff;color: #222;border-radius: 5px;box-sizing: border-box; border-color:#222'>
             <tr>
                 <th>
-                    Weekly Events:
+                    Weekly Events
+                </th>
+                <td></td>
+                <td></td>
+                <td></td>
+             
+            </tr>
+            <tr>
+                <th>
+                    Event Name
+                </th>
+                <th>
+                    Start Date
+                </th>
+                <th>
+                    Event Time
+                </th>
+                <th>
+                    Event Description
                 </th>
             </tr>
-            @foreach (var item in Model.Where(i => i.EventType != "Weekly Events"))
+            @foreach (var item in Model.Where(i => i.EventType == "Weekly Events"))
             {
 
                 <tr>
+
                     <td>
                         @Html.DisplayFor(modelItem => item.EventName)
                     </td>
-                </tr>
-                <tr>
+
                     <td>
                         @Html.DisplayFor(modelItem => item.StartDate)
                     </td>
-                </tr>
-                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.EventTime)
+                    </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.EventDescription)
                     </td>
                 </tr>
+
             }
+
         </table>
-        <table class="table">
+        <table class="table" style=' background: #fff;color: #222;border-radius: 5px;box-sizing: border-box; border-color:#222; align-content:center'>
             <tr>
                 <th>
-                    Upcoming Events:
+                    Upcoming Events
+                </th>
+                <td></td>
+                <td></td>
+                <td></td>
+              
+            </tr>
+            <tr>
+                <th>
+                    Event Name
+                </th>
+                <th>
+                    Start Date
+                </th>
+                <th>
+                    Event Time
+                </th>
+                <th>
+                    Event Description
                 </th>
             </tr>
-            @foreach (var item in Model.Where(i => i.EventType != "Upcoming Events"))
+            @foreach (var item in Model.Where(i => i.EventType == "Upcoming Events"))
             {
-
                 <tr>
+
                     <td>
                         @Html.DisplayFor(modelItem => item.EventName)
                     </td>
-                </tr>
 
-                <tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.StartDate)
                     </td>
-                </tr>
-                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.EventTime)
+                    </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.EventDescription)
                     </td>
                 </tr>
             }
+
         </table>
 
     </div>
+    <table style="visibility:hidden">
+        <tr><td>ghaewhwaeh</td></tr>
+    </table>
+
 </div>
