--- a/CalvaryOpebBibleWebsite/Views/Ministries/Delete.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Delete.cshtml
@@ -27,7 +27,13 @@
             <dd>
                 @Html.DisplayFor(model => model.MinistriesPosition)
             </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.MinistriesType)
+            </dt>
 
+            <dd>
+                @Html.DisplayFor(model => model.MinistriesType)
+            </dd>
         </dl>
 
         @using (Html.BeginForm())
