--- a/CalvaryOpebBibleWebsite/Views/Ministries/Details.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Details.cshtml
@@ -26,6 +26,13 @@
             <dd>
                 @Html.DisplayFor(model => model.MinistriesPosition)
             </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.MinistriesType)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.MinistriesType)
+            </dd>
 
         </dl>
     </div>
