--- a/CalvaryOpebBibleWebsite/Views/Shared/_Layout.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Shared/_Layout.cshtml
@@ -49,16 +49,13 @@
                     <li style="height: 83px;">
                         @Html.ActionLink("Ministries", "Index", "Ministries")
                         <ul class="nav navbar-nav navbar navbar-inverse" style="margin-top: -17px; width:650px; padding-left: 15px;">
-                            <li><a href="~/Ministries/HighSchool">High School</a></li>
-                            <li><a href="~/Ministries/MiddleSchool">Middle School</a></li>
+
                             <li><a href="~/Ministries/Children">Children</a></li>
-                            <li>
-                                <a href="#" style=" height: 51px;">Community Groups</a>
-                                <ul class="nav navbar-nav navbar navbar-inverse" style="margin-top: 51px; padding-left: 15px; width: 200px;">
-                                    <li><a href="~/Ministries/College/">College</a></li>
-                                    <li><a href="~/Ministries/Adults/">Adults</a></li>
-                                </ul>
-                            </li>
+                            <li><a href="~/Ministries/MiddleSchool">Middle School</a></li>
+                            <li><a href="~/Ministries/HighSchool">High School</a></li>
+                            <li><a href="~/Ministries/College">College</a></li>
+                            <li><a href="~/Ministries/CommunityGroups/">Community Groups</a></li>
+                            <li><a href="~/Ministries/Adults/">Adults</a></li>
                             <li><a href="~/Ministries/Seniors/">Seniors</a></li>
                         </ul>
                     </li>
