--- a/CalvaryOpebBibleWebsite/Views/Shared/_Layout.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                             <li><a href="~/Event/Index/">Events</a></li>
                         </ul>
                     </li>
-                    <li style="height: 83px;">@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li style="height: 83px;"><a href="~/Views/Contact/Index.cshtml">Contact</a></li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
